--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,14 +12,8 @@
 }
 
 @theme {
-  --color-primary: #d97745;
-  --color-primary-dull: #c16638;
+  --color-primary: #2563eb;
+  --color-primary-dull: #1f58d8;
   --color-light: #eef2f7;
-  --color-borderColor: #d7dee8;
-  --color-accent: #f2b366;
-}
-
-body {
-  background-color: #eef2f7;
-  color: #111827;
+  --color-borderColor: #c4c7d2;
 }
