fix/gitignore file

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,8 +12,8 @@
 }
 
 @theme {
-  --color-primary: #2563eb;
-  --color-primary-dull: #1f58d8;
+  --color-primary: #1f2937;
+  --color-primary-dull: #111827;
   --color-light: #eef2f7;
-  --color-borderColor: #c4c7d2;
+  --color-borderColor: #d1d5db;
 }
